deploy/policies/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: disallow-latest-tag

spec:

  validationFailureAction: Enforce

  background: true


  rules:

    - name: block-latest-image


      match:

        any:

          - resources:

              kinds:
                - Pod


      validate:

        message: "Images using latest tag are not allowed"


        pattern:

          spec:

            containers:

              - image: "!*:latest"
